--- a/templates/home/AddEmp.html
+++ b/templates/home/AddEmp.html
@@ -339,6 +339,7 @@ label {
         {{uu.N}}
       </h3>
         <p class="card-content"><h5 class="card-title">{{uu.U}}</h5></p>
+        <p class="card-content"><h5 class="card-title">{{uu.E}}</h5></p>
         <a href="/delE/{{uu.U}}" class="lv-card-btn">Delete</a>
       </div>
     
