--- a/templates/home/Covid_Updates.html
+++ b/templates/home/Covid_Updates.html
@@ -74,7 +74,7 @@
        }
        #gridd>div {
               /* background-color:rgb(12, 12, 86) ; */
-              background-image: linear-gradient(45deg,rgb(171, 138, 255), rgb(183, 255, 197));
+              background:radial-gradient(#a1c4fd ,#c2e9fb);
 
        }
       #gl > .outer> select{
@@ -128,7 +128,7 @@ margin: auto;
        margin-left: 5px;
        margin-bottom: 10px;
        /* box-shadow: chartreuse 5px 5px 5px; */
-       color: rgb(255, 255, 255);
+       color: rgb(2, 16, 84);
        display: flex;
        /* text-decoration: w; */
        flex-direction: column;
@@ -147,27 +147,27 @@ align-items: center;
  {% comment %} transform:skewY(5deg); {% endcomment %}
 }
 #dc{
-       background-image: linear-gradient( rgb(110, 255, 245),rgb(79, 88, 255));
+      background: radial-gradient(#1fe4f5, #3fbafe);
 }
 #dd{
-       background-image: linear-gradient( rgb(110, 255, 245),rgb(79, 88, 255));
+      background: radial-gradient(#1fe4f5, #3fbafe);
 }
 #dr{
-       background-image: linear-gradient( rgb(110, 255, 245),rgb(79, 88, 255));
+      background: radial-gradient(#1fe4f5, #3fbafe);
 }
 #td{
-       background-image: linear-gradient( rgb(110, 255, 245),rgb(79, 88, 255));
+      background: radial-gradient(#1fe4f5, #3fbafe);
 }
 #tr{
-       background-image: linear-gradient( rgb(110, 255, 245),rgb(79, 88, 255));
+      background: radial-gradient(#1fe4f5, #3fbafe);
 }
 #tc{
-       background-image: linear-gradient( rgb(110, 255, 245),rgb(79, 88, 255));
+      background: radial-gradient(#1fe4f5, #3fbafe);
        
 }
 #v{
        /* background-color: #00e400; */
-       background-image: linear-gradient( rgb(110, 255, 245),rgb(79, 88, 255));
+      background: radial-gradient(#1fe4f5, #3fbafe);
 }
 .box b{
        font-family: 'Times New Roman', Times, serif;
@@ -330,7 +330,7 @@ margin: auto;       }
 </div>
 <img src="" alt="" class="flg">
 <div class="vacc">
-<div class="hdd" style="font-family: 'Times New Roman', Times, serif;">INDIA</div>
+<div class="hdd" style="font-family: 'Times New Roman', Times, serif; font-weight: bold;">INDIA</div>
 
 <div id="dc" class="box">
        <b>  Daily Confirmed</b>
