--- a/templates/blog/blogHome.html
+++ b/templates/blog/blogHome.html
@@ -191,7 +191,11 @@
 
       </p>
     </div>
-    <a href="/blog/{{post.sno}}" class="btn-hover butto color-7" style="padding:9px 13px ;">Read more</a>
+
+    <a href="/blog/{{post.sno}}" >
+      <button class="custom-btn btn-9">Read More</button>
+    
+    </a>
   </div>
   
   
