--- a/templates/home/Donors.html
+++ b/templates/home/Donors.html
@@ -86,7 +86,7 @@ top: 70vh;
                 <option value="4">O +</option>
                 <option value="5">A -</option>
                 <option value="6">B -</option>
-                <option value="7">Ab -</option>
+                <option value="7">AB -</option>
                 <option value="8">O -</option>
 
                 <option value="9">A +  (Plasma)</option>
