--- a/templates/blog/blogPost.html
+++ b/templates/blog/blogPost.html
@@ -85,7 +85,10 @@ margin-top: 2vh;
 margin-bottom: 3vh; 
 }
 
-    
+    /* .fb{
+    max-height: 70vh;
+    overflow-y:scroll ;
+    } */
 </style>
 {% endblock css %}
 
@@ -122,17 +125,30 @@ By
 <div class="b">
 
 
-  <a href="/blog" class="btn btn-warning">Back</a>
+  <a href="/blog" >
+    <button class="custom-btn btn-1"><span>Back</span></button>
+    
+  </a>
+  <button id="myBtn" class="custom-btn btn-1">
+    
+    Report</button>
   {% if post.authorUsername == userp.U %}
-  <a href="/blog/delB/{{post.sno}}" class="btn btn-danger">Delete</a>
+  <a href="/blog/delB/{{post.sno}}" >
+    
+    <button class="custom-btn btn-7"><span>Delete</span></button>
+    
+    </a>
   
   
   {% elif userp.G == "e" %}
-  <a href="/blog/delB/{{post.sno}}" class="btn btn-danger">Delete</a>
+  <a href="/blog/delB/{{post.sno}}" >
+    
+    <button class="custom-btn btn-7"><span>Delete</span></button>
+    
+    </a>
   
   
   {% endif %} 
-  <button id="myBtn" class="btn btn-primary">Report</button>
 </div></div>
       
 <!-- 
@@ -186,8 +202,8 @@ By
   </div>
 
 
+  <button type="submit" class="custom-btn btn-3"><span>Report</span></button>
  
-  <button type="submit" class="btn btn-primary my-2">Submit</button>
 </form>
 
   </div>
@@ -195,15 +211,18 @@ By
 </div>
     
 
+<div class="fb">
+
+  
+</div>
+</div>
+<div class="fb-like lik" data-href="https://covid-survivorsiitisoc.herokuapp.com/blog/{{post.sno}}" data-width="100%" data-layout="standard" data-action="like" data-size="large" data-share="true"></div>
+<div class="container">
+  <div class="fb-comments" data-href="https://covid-survivorsiitisoc.herokuapp.com/blog/{{post.sno}}" data-width="100%" data-numposts="3"></div>
+</div>
+
 
 </div>
-    </div>
-<div class="fb-like lik" data-href="https://covid-survivorsiitisoc.herokuapp.com/blog/{{post.sno}}" data-width="100%" data-layout="standard" data-action="like" data-size="large" data-share="true"></div>
-    <div class="container">
-    <div class="fb-comments" data-href="https://covid-survivorsiitisoc.herokuapp.com/blog/{{post.sno}}" data-width="100%" data-numposts="3"></div>
-    </div>
-
-
 
 
     <script>
