--- a/templates/home/profile.html
+++ b/templates/home/profile.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 
 {% block title %}Profile{% endblock title %}
+{% block links %}
+
+
+{% endblock links %}
 
 {% block css %}
 <style>
@@ -58,6 +62,7 @@
 .shadow-none {
   box-shadow: none!important;
 }
+
 
 body {
   background: #eee;
@@ -118,6 +123,56 @@ body {
   color: white;
   transform: rotateY( 180deg );
 }
+#status{
+  width: 90%;
+  height: 85%;
+  box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.25);
+  background: radial-gradient(#fdfcfb , #e2d1c3);
+  border-radius: 9px;
+  margin: auto;
+  transition: all 0.3s;
+}
+#status:hover{
+  transform: scale(0.98,0.98)
+}
+/* checkbox***************** */
+
+label {
+  padding: 4px 6px;
+  line-height: 190%;
+  outline-style: none;
+  transition: all .6s;
+}
+
+.hiddenCB div {
+  display: inline;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.hiddenCB input[type="checkbox"],
+.hiddenCB input[type="radio"] {
+  display: none;
+  
+}
+
+.hiddenCB label {
+  
+  cursor: pointer;
+}
+
+.hiddenCB input[type="checkbox"]+label:hover{
+  background: rgba(0, 128, 128, .8);
+}
+
+.hiddenCB input[type="checkbox"]:checked+label {
+  background: rgba(0, 128, 128, .4);
+}
+
+.hiddenCB input[type="checkbox"]:checked+label:hover{
+  background: rgba(0, 128, 128, 0, .7);
+}
 </style>
 {% endblock css %}
 
@@ -175,6 +230,7 @@ body {
 
                       {% endif %}
 
+{% else %}
 
 
   {% endif %}
@@ -187,11 +243,11 @@ body {
                   </div>
                 </div>
               </div>
-             <div class="card mt-3" style="height: 50vh;">
+              {% if gg == "T"  %}
+              <div class="card mt-3" style="height: 50vh;">
                 <ul class="list-group list-group-flush">
                   <div class="d-flex flex-column align-items-center text-center">
                     {% load static %}
-{% if p1.G != "h" %}
                     <br><br><br><br><br><br><br><br>
                     <br><br><br><br><br><br><br><br>
                       <!-- <source media="(min-width: )" srcset=""> -->
@@ -210,9 +266,26 @@ body {
      </a>
   
 {% endif %}
+              {% if p1.G == "h"  %}
+              <div class="card mt-3" style="height: 50vh;">
+                <ul class="list-group list-group-flush">
+                  <div class="d-flex flex-column align-items-center text-center">
+                   
+          
+  
+{% endif %}
                       <div class="mt-3">
-
-                 
+                        <div class="hiddenCB">
+                          <h3>Make your choice(s)</h3>
+                        <form action="/profile" method="POST" >
+                          {% csrf_token %}
+                          <div>
+                        
+                          </div>
+                        </div>
+                        <button type="submit">Update data</button>
+                        
+                      </form>
                 </ul>
               </div> 
             </div>
@@ -459,6 +532,7 @@ body {
                     
                 
 {% endif %}
+{{status}}
 {% if gg == "T" %}
 <h4>Hey {{fn}}, Welcome to our website... </h4>
  <a href="/getstarted">
@@ -467,6 +541,10 @@ body {
 
 
   </a>
+                       <a href="/logout">
+
+                           <button class="custom-btn btn-7"><span>Logout</span></button>
+</a>
   {% else %}
   <h4>Hey {{P1.N}}, Welcome to our website... </h4>
  <a href="/getstarted">
@@ -516,10 +594,11 @@ body {
                       </div> {% endcomment %}
 
  <a href="/commentshow">
-          <button class="custom-btn btn-8"><span>Comments</span></button>
+          <button class="custom-btn btn-3"><span>Comments</span></button>
 
 
   </a>
+
 
                     
                 
@@ -529,17 +608,62 @@ body {
                     </div>
                   </div>
                 </div>
+                {% if status != "N" %}
+                
                 <div class="col-sm-6 mb-3">
                   <div class="card h-100">
                     <div class="card-body">
                       <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2"></i></h6>
+                    {% if p1.G == "e" %}
+                      <h4>set Blood Donation Appointments</h4>
+ <a href="/setappointmentpage">
+          <button class="custom-btn btn-8"><span>Set Appointments</span></button>
+
+
+  </a>
+
+  <h4>Update and Set Blood donation status</h4>
+ <a href="/appointmentsshown">
+          <button class="custom-btn btn-8"><span>Appointments</span></button>
+
+
+  </a>
+
                     
+                    
+                    {% endif %}
                {% if p1.G != "h" %}
+              
+              {% if gg != "T" %}
+
                                       <a href="/logout">
 
                            <button class="custom-btn btn-7"><span>Logout</span></button>
+              {% endif %} 
 </a>
-               {% endif %}      
+               {% endif %}    
+               
+               <!-- {{status}} -->
+               {% if "AppSeted" in status %}
+               <div id="status">
+ 
+                 <p>
+                   
+                   Your Appointment is fixed for <br> <span style="color: rgb(0, 0, 0);"> {{status | slice:"8:18"}} </span>
+                   for more details please contact  <span style="color: rgb(0, 0, 0);"> {{hname}} </span>
+                 </p>
+                </div>
+                 {% elif "BloodDonated" in status %}
+                 <div id="status">
+
+                 <h4>
+                   {{status | slice:"12:22"}} <br>
+                   Thanks for Donating Your Blood! it will help teh needy
+                  </h4>
+                </div>                  {% endif %}
+
+
+                 
                {% if p1.G == "h" %}
                <h4>Available Blood Groups</h4>
                
@@ -616,6 +740,7 @@ body {
                   </div>
                 </div>
               </div>
+                {% endif %}
 
 
 
