--- a/templates/base.html
+++ b/templates/base.html
@@ -542,7 +542,9 @@ display: flex;
     }
   
     
-
+    .p-3 {
+    padding:0;
+}
 
     /* ------------------------footercss end -------------------------- */
   </style>
