--- a/templates/home/Donors.html
+++ b/templates/home/Donors.html
@@ -95,7 +95,7 @@ top: 70vh;
                 <option value="12">O + (Plasma)</option>
                 <option value="13">A - (Plasma)</option>
                 <option value="14">B - (Plasma)</option>
-                <option value="15">Ab - (Plasma)</option>
+                <option value="15">AB - (Plasma)</option>
                 <option value="16">O - (Plasma)</option>
           </select>
       <button type="submit" id="bt" class="btn-hover color-11">Search</button>
