--- a/templates/home/profile.html
+++ b/templates/home/profile.html
@@ -139,17 +139,24 @@ body {
 
 label {
   padding: 4px 6px;
+  width: 80px;
+  
   line-height: 190%;
   outline-style: none;
-  transition: all .6s;
+  transition: all .3s;
+  font-weight: bold;
+  margin: 3px;
 }
 
 .hiddenCB div {
   display: inline;
-  margin: 0;
+  /* margin: 5px; */
   padding: 0;
   list-style: none;
+
 }
+
+
 
 .hiddenCB input[type="checkbox"],
 .hiddenCB input[type="radio"] {
@@ -163,16 +170,20 @@ label {
 }
 
 .hiddenCB input[type="checkbox"]+label:hover{
-  background: rgba(0, 128, 128, .8);
+  background: rgb(3, 0, 69);
+  color: white;
+  
 }
 
 .hiddenCB input[type="checkbox"]:checked+label {
-  background: rgba(0, 128, 128, .4);
+  background: rgb(3, 1, 71);
+  color: white;
 }
 
 .hiddenCB input[type="checkbox"]:checked+label:hover{
   background: rgba(0, 128, 128, 0, .7);
 }
+
 </style>
 {% endblock css %}
 
@@ -244,7 +255,7 @@ label {
                 </div>
               </div>
               {% if gg == "T"  %}
-              <div class="card mt-3" style="height: 50vh;">
+              <div class="card mt-3" >
                 <ul class="list-group list-group-flush">
                   <div class="d-flex flex-column align-items-center text-center">
                     {% load static %}
@@ -267,25 +278,55 @@ label {
   
 {% endif %}
               {% if p1.G == "h"  %}
+              {% endif %}
               <div class="card mt-3" style="height: 50vh;">
                 <ul class="list-group list-group-flush">
                   <div class="d-flex flex-column align-items-center text-center">
                    
           
-  
-{% endif %}
-                      <div class="mt-3">
-                        <div class="hiddenCB">
-                          <h3>Make your choice(s)</h3>
-                        <form action="/profile" method="POST" >
-                          {% csrf_token %}
-                          <div>
-                        
-                          </div>
-                        </div>
-                        <button type="submit">Update data</button>
-                        
-                      </form>
+    {% if p1.G == "e" %}
+  <h4 class="mt-4">Hey {{p1.N}}, Welcome to our website... </h4>
+ <a href="/getstarted">
+       <button class="custom-btn btn-5"><span>Get started</span></button>
+
+
+
+  </a>
+  {% endif %}
+
+
+  <div class="hiddenCB">
+  <h3 class="my-3"> Update Available Blood data</h3>
+  <form action="/profile" method="POST">
+    {% csrf_token %}
+    
+    <div>
+      <input type="checkbox" name="A+" id="A+" /><label for="A+">A+</label>
+      <input type="checkbox" name="B+" id="B+" /><label for="B+">B+</label>
+      <input type="checkbox" name="AB+" id="AB+" /><label for="AB+">AB+</label>
+      <input type="checkbox" name="O+" id="O+" /><label for="O+">O+</label>
+    <input type="checkbox" name="A-" id="A-" /><label for="A-">A-</label>
+    <input type="checkbox" name="B-" id="B-" /><label for="B-">B-</label>
+    <input type="checkbox" name="AB-" id="AB-" /><label for="AB-">AB-</label>
+    <input type="checkbox" name="O-" id="O-" /><label for="O-">O-</label>
+    <input type="checkbox" name="A+(P)" id="A+(P)" /><label for="A+(P)">A+(P)</label>
+    <input type="checkbox" name="B+(P)" id="B+(P)" /><label for="B+(P)">B+(P)</label>
+    <input type="checkbox" name="AB+(P)" id="AB+(P)" /><label for="AB+(P)">AB+(P)</label>
+    <input type="checkbox" name="O+(P)" id="O+(P)" /><label for="O+(P)">O+(P)</label>
+    <input type="checkbox" name="A-(P)" id="A-(P)" /><label for="A-(P)">A-(P)</label>
+    <input type="checkbox" name="B-(P)" id="B-(P)" /><label for="B-(P)">B-(P)</label>
+    <input type="checkbox" name="AB-(P)" id="AB-(P)" /><label for="AB-(P)">AB-(P)</label>
+    <input type="checkbox" name="O-(P)" id="O-(P)" /><label for="O-(P)">O-(P)</label>
+    
+
+       <button type="submit" class="custom-btn btn-9">Update</button>
+
+  </div>
+</form>
+</div>
+
+                  
+                    
                 </ul>
               </div> 
             </div>
@@ -546,13 +587,15 @@ label {
                            <button class="custom-btn btn-7"><span>Logout</span></button>
 </a>
   {% else %}
-  <h4>Hey {{P1.N}}, Welcome to our website... </h4>
+  {% if p1.G != "e" %}
+  <h4>Hey {{p1.N}}, Welcome to our website... </h4>
  <a href="/getstarted">
        <button class="custom-btn btn-5"><span>Get started</span></button>
 
 
 
   </a>
+  {% endif %}
 
 
 {% endif %}
