--- a/templates/home/profile.html
+++ b/templates/home/profile.html
@@ -294,7 +294,8 @@ label {
   </a>
   {% endif %}
 
-
+  {% if G == "h" %}
+  
   <div class="hiddenCB">
   <h3 class="my-3"> Update Available Blood data</h3>
   <form action="/profile" method="POST">
@@ -324,6 +325,7 @@ label {
   </div>
 </form>
 </div>
+  {% endif %}
 
                   
                     
