--- a/templates/base.html
+++ b/templates/base.html
@@ -297,7 +297,7 @@
       animation: l 4s ease-out -0.2s 1;
     }
     .n{
-      max-height:9vh ;
+      max-height:9vh;
     }
 
     .cc {
@@ -523,6 +523,9 @@ display: flex;
   
 
   
+}
+body{
+  background-image:   radial-gradient(#f5f7fa , #c3cfe2);
 }
 
 @media screen and (min-width: 889px){
