--- a/templates/home/Covid_Updates.html
+++ b/templates/home/Covid_Updates.html
@@ -301,7 +301,8 @@ margin: auto;       }
               </select>
 
        </div>
-              <button id="DataShown" type="button" style="z-index: -4; float:right;" class="btn-hover color-10">Search</button>
+       <button id="DataShown" type="button"  class="custom-btn btn-3"><span>Search</span></button>
+
        
 
               <div id="ff">
