--- a/templates/home/profile.html
+++ b/templates/home/profile.html
@@ -200,8 +200,23 @@ label {
           <div class="card-body">
             <div class="d-flex flex-column align-items-center text-center">
               {% load static %}
+{% if p1.G == "h" %}
               <img id="bgg" src="{% static "imgs/hs.jpg" %}" alt="Admin" class="rounded-circle" width="300" />
+{% endif %}
+{% if p1.G == "e" %}
+              <img id="bgg" src="{% static "imgs/user.jpg" %}" alt="Admin" class="rounded-circle" width="300" />
+{% endif %}
+{% if p1.G == "c" %}
+              <img id="bgg" src="{% static "imgs/user.jpg" %}" alt="Admin" class="rounded-circle" width="300" />
+{% endif %}
+{% if p1.G == "Wa" %}
+              <img id="bgg" src="{% static "imgs/adm.jpg" %}" alt="Admin" class="rounded-circle" width="300" />
+{% endif %}
+{% if gg == "T" %}
+              <img id="bgg" src="{% static "imgs/u2.jpg" %}" alt="Admin" class="rounded-circle" width="300" />
+{% endif %}
               <div class="mt-3">
+          
                 {% if gg == "T" %}
                 
                 <h3>{{fn}} </h3>
@@ -294,7 +309,7 @@ label {
   </a>
   {% endif %}
 
-  {% if G == "h" %}
+  {% if p1.G == "h" %}
   
   <div class="hiddenCB">
   <h3 class="my-3"> Update Available Blood data</h3>
